# texture2dStudio

./: .gitignore  CMakeLists.txt  LICENSE  README.md  VersionInfo.rc  VersionInfo.rc.in  main.cpp  texture2d.cpp  texture2d.h
src/: Astc.cpp  Astc.h  Ktx.cpp  Ktx.h  KtxFile.cpp  KtxFile.h  KtxFileHeader.cpp  KtxFileHeader.h  SourceImage.cpp  SourceImage.h
